--- a/clustvarsel/pkgdown.yml
+++ b/clustvarsel/pkgdown.yml
@@ -1,8 +1,9 @@
-pandoc: '2.5'
-pkgdown: 1.3.0
+pandoc: 2.11.2
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   clustvarsel: clustvarsel.html
+last_built: 2020-12-16T09:36Z
 urls:
   reference: https://mclust-org.github.io/clustvarsel/reference
   article: https://mclust-org.github.io/clustvarsel/articles
