--- a/msir/pkgdown.yml
+++ b/msir/pkgdown.yml
@@ -1,8 +1,9 @@
-pandoc: '2.7'
-pkgdown: 1.3.0
+pandoc: 2.11.2
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   msir: msir.html
+last_built: 2020-12-16T10:48Z
 urls:
   reference: https://mclust-org.github.io/msir/reference
   article: https://mclust-org.github.io/msir/articles
