--- a/ppgmmga/pkgdown.yml
+++ b/ppgmmga/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: '3.1'
+pandoc: 3.1.8
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   ppgmmga: ppgmmga.html
-last_built: 2023-03-17T16:36Z
+last_built: 2023-11-17T18:05Z
 urls:
   reference: https://mclust-org.github.io/ppgmmga/reference
   article: https://mclust-org.github.io/ppgmmga/articles
